--- a/sass/sections/_header.sass
+++ b/sass/sections/_header.sass
@@ -7,24 +7,12 @@ header
 
   img
     display: inline-block
+    margin-bottom: 0
 
-  .header-links
-    a
-      text-decoration: none
+  h1
+    margin-bottom: 8px
 
-      &:hover
-        text-decoration: none
-
-      img
-        height: auto
-        max-width: 48px
-        display: inline-block
-        margin-right: 10px
-
-        +media('>phablet')
-          max-width: 100%
-          margin-right: 40px
-
-      &:last-of-type
-        img
-          margin-right: 0
+h2.header-blue
+  color: $blue
+  font-size: 20px
+  line-height: 24px
