--- a/sass/sections/_section.sass
+++ b/sass/sections/_section.sass
@@ -1,2 +1,25 @@
 section
   margin-bottom: 80px
+
+section#contact
+  margin-bottom: 40px
+
+section#about
+  text-align: justify
+
+.contact-links
+  a
+    text-decoration: none
+
+    &:hover
+      text-decoration: none
+
+    img
+      height: auto
+      max-width: 32px
+      display: inline-block
+      margin-right: 20px
+
+    &:last-of-type
+      img
+        margin-right: 0
