--- a/sass/settings/_scaffold.sass
+++ b/sass/settings/_scaffold.sass
@@ -2,12 +2,13 @@ body
   font-family: $base-font-family
   font-size: $base-font-size
   line-height: $base-line-height
-  font-weight: $base-font-weight
   background: $white
   color: $black
-  
+
+h1, h2
+  font-family: $heading-font-family
+
 h1, .text-big
-  font-weight: $h1-font-weight
   font-size: $h1-font-size / 1.125
   line-height: $h1-line-height / 1.125
 
@@ -18,15 +19,13 @@ h1, .text-big
 h2
   font-size: $h2-font-size
   line-height: $h2-line-height
-  font-weight: $h2-font-weight  
 
 h3
   font-size: $h3-font-size
   line-height: $h3-line-height
-  font-weight: $h3-font-weight
   margin: 0 0 20px 0
 
-h1, h2, p, img
+h1, h2, p
   margin: 0 0 40px 0
 
 a
@@ -43,4 +42,4 @@ header, section, footer
   margin: 0 auto
 
   +media('>phablet')
-    max-width: 600px
+    max-width: 640px
