--- a/sass/settings/_variables.sass
+++ b/sass/settings/_variables.sass
@@ -6,30 +6,23 @@ $gray: #EEEEEE
 $white: #FFFFFF
 
 // Texts
-$base-font-family: "Roboto", Helvetica, Arial, sans-serif
+$base-font-family: "PT Sans", Helvetica, Arial, sans-serif
+$heading-font-family: "VT323", sans-serif
 
-$font-weight-light: 300
-$font-weight-regular: 400
-$font-weight-medium: 500
-
-$base-font-size: 18px
+$base-font-size: 16px
 $base-line-height: 21px
-$base-font-weight: $font-weight-light
 
 $small-font-size: 12px
 $small-line-height: 14px
 
-$h1-font-size: 36px
-$h1-line-height: 42px
-$h1-font-weight: $base-font-weight
+$h1-font-size: 48px
+$h1-line-height: 48px
 
 $h2-font-size: 24px
 $h2-line-height: 28px
-$h2-font-weight: $base-font-weight
 
 $h3-font-size: 18px
 $h3-line-height: 21px
-$h3-font-weight: $font-weight-light
 
 // Media breakpoints
 $breakpoints: ('phablet': 640px)
