--- a/sass/sections/_section.sass
+++ b/sass/sections/_section.sass
@@ -7,6 +7,10 @@ section#contact
 section#about
   text-align: justify
 
+section#skillset
+  h3
+    margin-bottom: 4px
+
 .contact-links
   a
     text-decoration: none
