--- a/sass/settings/_scaffold.sass
+++ b/sass/settings/_scaffold.sass
@@ -24,6 +24,7 @@ h3
   font-size: $h3-font-size
   line-height: $h3-line-height
   margin: 0 0 20px 0
+  font-weight: normal
 
 h1, h2, p
   margin: 0 0 40px 0
