Change to jekyll static generator

--- a/_sass/base.sass
+++ b/_sass/base.sass
@@ -1,5 +1,4 @@
-@import "../node_modules/node-normalize-scss/normalize"
-@import "../node_modules/include-media/dist/include-media"
+@import "normalize"
 
 @import "settings/variables"
 @import "settings/scaffold"
