--- a/_sass/sections/_section.sass
+++ b/_sass/sections/_section.sass
@@ -1,7 +1,7 @@
 section
   margin-bottom: 80px
 
-  +media('print')
+  @media print
     margin-bottom: 60px
 
 section#contact
@@ -32,7 +32,7 @@ section#skillset
       img
         margin-right: 0
 
-  +media('print')
+  @media print
     a
       display: block
       margin-bottom: 5px
