--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -8,7 +8,7 @@ layout: base
     </a>
   </p>
 
-  <h2>{{ page.title | capitalize }}.</h2>
+  <h2>{{ page.title }}.</h2>
   <h2 class="header-blue">{{ page.date | date: "%A, %d.%m.%Y" }}</h2>
 </header>
 
