--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -12,7 +12,7 @@ layout: base
   <h2 class="header-blue">{{ page.date | date: "%A, %d.%m.%Y" }}</h2>
 </header>
 
-<section>
+<section id="post">
   {{ content }}
 </section>
 
