--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,120 +1,59 @@
+/* open-sans-300 - latin_latin-ext */
 @font-face {
-  font-family: 'Lato';
-  src: url('../fonts/Lato-Regular.eot');
-  src: url('../fonts/Lato-Regular.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Lato-Regular.woff2') format('woff2'),
-      url('../fonts/Lato-Regular.woff') format('woff'),
-      url('../fonts/Lato-Regular.ttf') format('truetype');
-  font-weight: normal;
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Open Sans';
   font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Lato Hairline';
-  src: url('../fonts/Lato-HairlineItalic.eot');
-  src: url('../fonts/Lato-HairlineItalic.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Lato-HairlineItalic.woff2') format('woff2'),
-      url('../fonts/Lato-HairlineItalic.woff') format('woff'),
-      url('../fonts/Lato-HairlineItalic.ttf') format('truetype');
   font-weight: 300;
-  font-style: italic;
-  font-display: swap;
+  src: url('../fonts/open-sans-v36-latin_latin-ext-300.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+       url('../fonts/open-sans-v36-latin_latin-ext-300.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
+/* open-sans-300italic - latin_latin-ext */
 @font-face {
-  font-family: 'Lato';
-  src: url('../fonts/Lato-Italic.eot');
-  src: url('../fonts/Lato-Italic.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Lato-Italic.woff2') format('woff2'),
-      url('../fonts/Lato-Italic.woff') format('woff'),
-      url('../fonts/Lato-Italic.ttf') format('truetype');
-  font-weight: normal;
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Open Sans';
   font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Lato';
-  src: url('../fonts/Lato-Light.eot');
-  src: url('../fonts/Lato-Light.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Lato-Light.woff2') format('woff2'),
-      url('../fonts/Lato-Light.woff') format('woff'),
-      url('../fonts/Lato-Light.ttf') format('truetype');
   font-weight: 300;
-  font-style: normal;
-  font-display: swap;
+  src: url('../fonts/open-sans-v36-latin_latin-ext-300italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+       url('../fonts/open-sans-v36-latin_latin-ext-300italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
+/* open-sans-regular - latin_latin-ext */
 @font-face {
-  font-family: 'Lato';
-  src: url('../fonts/Lato-Black.eot');
-  src: url('../fonts/Lato-Black.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Lato-Black.woff2') format('woff2'),
-      url('../fonts/Lato-Black.woff') format('woff'),
-      url('../fonts/Lato-Black.ttf') format('truetype');
-  font-weight: 900;
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Open Sans';
   font-style: normal;
-  font-display: swap;
+  font-weight: 400;
+  src: url('../fonts/open-sans-v36-latin_latin-ext-regular.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+       url('../fonts/open-sans-v36-latin_latin-ext-regular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
+/* open-sans-italic - latin_latin-ext */
 @font-face {
-  font-family: 'Lato';
-  src: url('../fonts/Lato-BlackItalic.eot');
-  src: url('../fonts/Lato-BlackItalic.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Lato-BlackItalic.woff2') format('woff2'),
-      url('../fonts/Lato-BlackItalic.woff') format('woff'),
-      url('../fonts/Lato-BlackItalic.ttf') format('truetype');
-  font-weight: 900;
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Open Sans';
   font-style: italic;
-  font-display: swap;
+  font-weight: 400;
+  src: url('../fonts/open-sans-v36-latin_latin-ext-italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+       url('../fonts/open-sans-v36-latin_latin-ext-italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
+/* open-sans-700 - latin_latin-ext */
 @font-face {
-  font-family: 'Lato';
-  src: url('../fonts/Lato-LightItalic.eot');
-  src: url('../fonts/Lato-LightItalic.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Lato-LightItalic.woff2') format('woff2'),
-      url('../fonts/Lato-LightItalic.woff') format('woff'),
-      url('../fonts/Lato-LightItalic.ttf') format('truetype');
-  font-weight: 300;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Lato Hairline';
-  src: url('../fonts/Lato-Hairline.eot');
-  src: url('../fonts/Lato-Hairline.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Lato-Hairline.woff2') format('woff2'),
-      url('../fonts/Lato-Hairline.woff') format('woff'),
-      url('../fonts/Lato-Hairline.ttf') format('truetype');
-  font-weight: 300;
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Open Sans';
   font-style: normal;
-  font-display: swap;
+  font-weight: 700;
+  src: url('../fonts/open-sans-v36-latin_latin-ext-700.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+       url('../fonts/open-sans-v36-latin_latin-ext-700.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
+/* open-sans-700italic - latin_latin-ext */
 @font-face {
-  font-family: 'Lato';
-  src: url('../fonts/Lato-Bold.eot');
-  src: url('../fonts/Lato-Bold.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Lato-Bold.woff2') format('woff2'),
-      url('../fonts/Lato-Bold.woff') format('woff'),
-      url('../fonts/Lato-Bold.ttf') format('truetype');
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Lato';
-  src: url('../fonts/Lato-BoldItalic.eot');
-  src: url('../fonts/Lato-BoldItalic.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Lato-BoldItalic.woff2') format('woff2'),
-      url('../fonts/Lato-BoldItalic.woff') format('woff'),
-      url('../fonts/Lato-BoldItalic.ttf') format('truetype');
-  font-weight: bold;
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Open Sans';
   font-style: italic;
-  font-display: swap;
+  font-weight: 700;
+  src: url('../fonts/open-sans-v36-latin_latin-ext-700italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+       url('../fonts/open-sans-v36-latin_latin-ext-700italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
-
