--- a/_sass/settings/_variables.scss
+++ b/_sass/settings/_variables.scss
@@ -6,9 +6,9 @@ $gray: #EEEEEE;
 $white: #FFFFFF;
 
 // Texts
-$base-font-family: "Lato", Helvetica, Arial, sans-serif;
+$base-font-family: "Open Sans", Helvetica, Arial, sans-serif;
 $base-font-weight: normal;
-$heading-font-family: "Lato", Helvetica, Arial, sans-serif;
+$heading-font-family: "Open Sans", Helvetica, Arial, sans-serif;
 $heading-font-weight: lighter;
 
 $base-font-size: 16px;
