--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -33,7 +33,7 @@ Oh, and here is the link to repo: https://github.com/alesrosina/alesrosina :)
   <meta property="og:type" content="profile"/>
   <meta property="og:title" content="Ales Rosina - software engineer"/>
   <meta property="og:description" content="A full-stack Rails developer with focus on frontend development."/>
-  <meta property="og:image:url" content="http://alesrosina.com/images/logo_400.png"/>
+  <meta property="og:image:url" content="http://alesrosina.com/logo_400.png"/>
   <meta property="og:image:width" content="400"/>
   <meta property="og:image:height" content="400"/>
   <!-- Favicon -->
