--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -4,7 +4,7 @@ layout: base
 <header class="small">
   <p>
     <a href="/" alt="Back to home">
-      <img src="/assets/images/logo.png" alt="Aleš Rosina">
+      <img src="/assets/logo.png" alt="Aleš Rosina">
     </a>
   </p>
 
