--- a/_sass/sections/_section.scss
+++ b/_sass/sections/_section.scss
@@ -10,6 +10,12 @@ section#contact {
 }
 section#about, section#post {
   text-align: justify;
+
+  img {
+    width: calc(100% - 10px);
+    padding: 5px;
+    border: 1px solid $gray;
+  }
 }
 section#skillset {
   h3 {
